--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "eslint-plugin-react-hooks": "^5.1.0-canary-33a32441e9-20240418",
     "framer-motion": "^11.0.28",
     "lucide-react": "^0.368.0",
     "next": "14.1.4",
