--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
+    "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
